# doc-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  REFACTORING.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/: chat.py  crawl_summary.txt  crawler.py  main.py  streamlit.py
src/doc_agent/: __init__.py  config.py  data_store.py  embedding_service.py  models.py  text_processor.py  web_crawler.py
