[project]
name = "doc-agent"
version = "0.1.0"
description = "A powerful documentation crawler and processor"
authors = [
    {name = "Fazil Raja", email = "70337151+fazilraja@users.noreply.github.com"},
]
dependencies = [
    "crawl4ai>=0.5.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "supabase>=2.13.0",
    "mirascope>=1.22.0",
    "chamois>=0.0.1",
    "google>=3.0.0",
    "python-lilypad[openai]>=0.0.34",
    "protobuf>=6.30.1",
    "googleapis-common-protos>=1.62.0",
    "openai>=1.12.0",
    "google-api-core[grpc]>=2.17.1",
    "google-auth>=2.28.1",
    "proto-plus>=1.23.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_agent"]

[tool.ruff]
# Assume Python 3.12
target-version = "py312"
line-length = 95

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle ('E'), pyflakes ('F'), and isort ('I') rules
select = ["E", "F", "I"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["doc_agent"]
