[project]
name = "doc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chamois>=0.0.1",
    "crawl4ai>=0.5.0.post4",
    "dotenv>=0.9.9",
    "mirascope[google]>=1.22.0",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
    "python-lilypad[google,openai]>=0.0.34",
    "requests>=2.32.3",
    "supabase>=2.14.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
